# Foundation

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: toolchain.cmake
log/: CMakeLists.txt  log.hpp  log_base.hpp  log_detail_concepts.hpp
log/appender/: appender_concept.hpp  base_file_appender.hpp  format_time_file_appender.hpp
log/container/: buffer_concept.h  msg_buffer.hpp
log/format/: format.hpp  format_concept.hpp
log/test/: base_file_logger_test.cpp  format_time_file_test.cpp
param/: CMakeLists.txt  param.hpp  param.json
param/test/: param_test.cpp
threadPool/: CMakeLists.txt
threadPool/container/: priority_queue.hpp
threadPool/task/: task_concept.hpp  task_controller.hpp  task_handler_impl.cpp  task_handler_impl.h
threadPool/test/: thread_pool_test.cpp
threadPool/thread_pool/: thread_pool.hpp
tool/: file_helper.hpp  time_helper.hpp
